--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/ProductDetails/ImageHeader/ImageHeaderCell.xib
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/ProductDetails/ImageHeader/ImageHeaderCell.xib
@@ -11,15 +11,26 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageHeaderCell" id="gTV-IL-0wX" customClass="ImageHeaderCell" customModule="CompositionalLayoutDemoApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="366"/>
+            <rect key="frame" x="0.0" y="0.0" width="377" height="366"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="366"/>
+                <rect key="frame" x="0.0" y="0.0" width="377" height="366"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lri-Bp-fC2">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="366"/>
+                        <rect key="frame" x="0.0" y="0.0" width="377" height="366"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fashion-redhead-women-with-suitcase-at-autumn-fiel-2022-01-13-20-31-32-utc 2" translatesAutoresizingMaskIntoConstraints="NO" id="zrZ-cl-BVX">
+                                <rect key="frame" x="0.0" y="0.0" width="377" height="366"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                        <constraints>
+                            <constraint firstItem="zrZ-cl-BVX" firstAttribute="top" secondItem="lri-Bp-fC2" secondAttribute="top" id="8mO-Md-BqN"/>
+                            <constraint firstAttribute="bottom" secondItem="zrZ-cl-BVX" secondAttribute="bottom" id="LfI-mc-cga"/>
+                            <constraint firstItem="zrZ-cl-BVX" firstAttribute="leading" secondItem="lri-Bp-fC2" secondAttribute="leading" id="kBU-Ng-kwb"/>
+                            <constraint firstAttribute="trailing" secondItem="zrZ-cl-BVX" secondAttribute="trailing" id="xaa-nn-k1v"/>
+                        </constraints>
                     </view>
                 </subviews>
             </view>
@@ -34,6 +45,7 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="fashion-redhead-women-with-suitcase-at-autumn-fiel-2022-01-13-20-31-32-utc 2" width="375" height="366"/>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
