--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/ProductDetails/Details/DetailsCell.xib
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/ProductDetails/Details/DetailsCell.xib
@@ -4,20 +4,38 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DetailsCell" id="gTV-IL-0wX" customClass="DetailsCell" customModule="CompositionalLayoutDemoApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="331"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="331"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cET-AI-CtU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="331"/>
+                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <point key="canvasLocation" x="70.769230769230774" y="20.616113744075829"/>
+            <constraints>
+                <constraint firstItem="cET-AI-CtU" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="5sO-6o-AAq"/>
+                <constraint firstItem="cET-AI-CtU" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Swj-6F-Xpc"/>
+                <constraint firstAttribute="bottom" secondItem="cET-AI-CtU" secondAttribute="bottom" id="hbl-rf-9r2"/>
+                <constraint firstAttribute="trailing" secondItem="cET-AI-CtU" secondAttribute="trailing" id="oEG-jK-Kae"/>
+            </constraints>
+            <point key="canvasLocation" x="70" y="20.260663507109005"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
